[tool.poetry]
name = "disturbed"
version = "0.1.0"
description = ""
authors = ["Pedro Rodrigues <hpedrorodrigues@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
requests = "^2.32.3"
slack-sdk = "^3.33.2"
pyyaml = "^6.0.2"
yamlcore = "^0.0.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-black = "^0.4.0"
flake8-isort = "^7.0.0"
pyproject-flake8 = "^7.0.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
